--- a/WebContent/css/cover.css
+++ b/WebContent/css/cover.css
@@ -22,3 +22,97 @@ body{
 .navbar-warpper .navbar .container{
   width: auto;
 }
+
+.login{
+  position: absolute;
+  right: 5px;
+}
+
+
+/*customize the carousel
+--------------------------------------------------------*/
+.carousel{
+  height: 500px;
+  margin-bottom: 60px;
+}
+.carousel-caption{
+  z-index: 10;
+}
+
+.carousel .item{
+  height: 500px;
+  background-color: #777;
+}
+.carousel-inner > .item >img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 500px;
+}
+
+/*marketing content
+-----------------------------------------------------------*/
+.img-circle{
+  width: 150px;
+  height: 150px;
+}
+.marketing .col-lg-4{
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.marketing h2{
+  font-weight: normal;
+}
+.marketing .col-lg-4 p{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+/*Featurettes
+-------------------------------------------------------------*/
+.featurette-divider{
+  margin: 80px 0;
+}
+
+.featurette-heading{
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+
+/*responsive css
+--------------------------------------------------------------*/
+@media (min-width:768px) {
+  .navbar-warpper{
+    margin-top: 20px;
+  }
+  .navbar-warpper .container{
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+  .navbar-warpper .navbar{
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .navbar-warpper .navbar{
+    border-radius: 4px;
+  }
+
+  .carousel-caption p{
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+
+
+  .featurette-heading{
+    font-size: 50px;
+  }
+
+
+
+
+}
