--- a/WebContent/css/user/register.css
+++ b/WebContent/css/user/register.css
@@ -1,20 +1,30 @@
-.main{
-	width:500px;
-	margin: 0 auto;
-	border: 1px solid gray;
+html {
+  position: relative;
+  min-height: 100%;
+}
+body{
+	background-color: #eee;
+	margin-bottom: 60px;
+}
+.container{
+	margin-top: 100px;
+	width:600px;
+	border:1px solid gray;
+	border-radius: 5px;
 	padding: 20px;
+	margin-bottom: 10px;
+	/*background-color: #fff;*/
 }
-.register{
-	text-align: right;
-	padding-right: 150px;
-	
+.title{
+	font-weight: bold;
 }
-.register li{
-	height:30px;
-	list-style-type: none;
-	
-}
-label.name{
-	text-align: right;
-	margin-right: 10px;
+
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color:#eee;
 }
